Details
-
Bug
-
Resolution: Fixed
-
P1: Critical
-
6.5.3, 6.6.0
-
734354c0b (dev), f77af7014 (6.7), 14ee33105 (6.6), 99cfde00b (tqtc/lts-6.5)
-
Foundations Sprint 97
Description
Caused by:
https://codereview.qt-project.org/c/qt/qtbase/+/487372
which now delays emitting headerDataChanged signal of a proxy model. If there are more changes than just one to the model, the headerDataChanged signal handler would be run with unintended section index.
That can easily lead to crashes as the section index can now be out of bounds.